--- a/Frontend/HeatmapModule/package.json
+++ b/Frontend/HeatmapModule/package.json
@@ -4,7 +4,8 @@
   "description": "A tutorial walkthrough of heatmap.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test" :"No test specified",
+    "start": "npx webpack"
   },
   "author": "Mads Norby",
   "license": "ISC",
