--- a/Frontend/charts/package.json
+++ b/Frontend/charts/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "heatmap.js": "^2.0.5",
+    "leaflet": "^1.5.1",
+    "leaflet-css": "^0.1.0",
     "leaflet-heatmap": "^1.0.0",
     "vega-lite": "^4.0.0-beta.11"
   },
