--- a/Frontend/charts/package.json
+++ b/Frontend/charts/package.json
@@ -14,6 +14,10 @@
     "leaflet": "^1.5.1",
     "leaflet-css": "^0.1.0",
     "leaflet-heatmap": "^1.0.0",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.3.1",
+    "vega": "^5.8.1",
+    "vega-embed": "^6.1.0",
     "vega-lite": "^4.0.0-beta.11"
   },
   "devDependencies": {
