--- a/Frontend/charts/package.json
+++ b/Frontend/charts/package.json
@@ -10,6 +10,8 @@
   "author": "Mads Norby",
   "license": "ISC",
   "dependencies": {
+    "d3": "^5.14.2",
+    "d3-scale": "^3.2.1",
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.5.1",
     "leaflet-css": "^0.1.0",
